# MyProjectEuler

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
cpp/: CMakeLists.txt
cpp/P0001/: mult35.cpp
cpp/P0002/: fibeven.cpp
cpp/P0003/: primefact.cpp
cpp/P0004/: palindromicnumber.cpp
cpp/P0005/: smallestdivisible.cpp
cpp/P0006/: sumsquare.cpp
cpp/P0007/: prime10001.cpp
cpp/P0008/: adjacent.cpp
cpp/P0009/: triplet.cpp
cpp/P0010/: primesum.cpp
cpp/P0011/: grid.cpp
cpp/P0012/: trianglenumbers.cpp
cpp/P0014/: longestCollatz.cpp
cpp/P0015/: grid.cpp
cpp/P0016/: powerdigitsum.cpp
cpp/P0018/: maximumpath.cpp
cpp/P0020/: factorialdigitsum.cpp
cpp/P0021/: amicablenumbers.cpp
cpp/P0022/: namescores.cpp
cpp/P0023/: nonabundantsums.cpp
cpp/P0024/: lexicographicperm.cpp
cpp/P0025/: fibo1000.cpp
cpp/P0026/: reciprocalcycles.cpp
cpp/P0027/: quadraticprimes.cpp
cpp/P0029/: distinctpowers.cpp
cpp/P0030/: digitfifthpowers.cpp
cpp/P0031/: coins.cpp
cpp/P0032/: pandigital.cpp
cpp/P0065/: euler65.cpp
cpp/P0067/: maximumpath.cpp
cpp/P0079/: euler79.cpp
octave/P0017/: numberletters.m
octave/P0028/: numberspiral.m
python/: run_all.sh
python/P0013/: sumfiftydigits.py
python/P0019/: dates.py
python/P0033/: cancelling_fractions.py
python/P0034/: digit_factorials.py
python/P0035/: circular_primes.py
python/P0036/: circular_primes.py
rust_euler_suite/: Cargo.toml  build.rs
rust_euler_suite/number_functions/: Cargo.toml
rust_euler_suite/number_functions/src/: lib.rs  number_functions.rs
rust_euler_suite/number_sequences/: Cargo.toml
rust_euler_suite/number_sequences/src/: hexagonal.rs  lib.rs  pentagonal.rs  polygonal.rs  triangle.rs
rust_euler_suite/p0037/: Cargo.toml
rust_euler_suite/p0037/src/: main.rs
rust_euler_suite/p0038/: Cargo.toml
rust_euler_suite/p0038/src/: main.rs
rust_euler_suite/p0039/: Cargo.toml
rust_euler_suite/p0039/src/: main.rs
rust_euler_suite/p0040/: Cargo.toml
rust_euler_suite/p0040/src/: main.rs
rust_euler_suite/p0041/: Cargo.toml
rust_euler_suite/p0041/src/: main.rs
rust_euler_suite/p0042/: Cargo.toml  build.rs
rust_euler_suite/p0042/src/: main.rs
rust_euler_suite/p0043/: Cargo.toml
rust_euler_suite/p0043/src/: main.rs
rust_euler_suite/p0044/: Cargo.toml
rust_euler_suite/p0044/src/: main.rs
rust_euler_suite/p0045/: Cargo.toml
rust_euler_suite/p0045/src/: main.rs
rust_euler_suite/p0046/: Cargo.toml
rust_euler_suite/p0046/src/: main.rs
rust_euler_suite/p0047/: Cargo.toml
rust_euler_suite/p0047/src/: main.rs
rust_euler_suite/p0048/: Cargo.toml
rust_euler_suite/p0048/src/: main.rs
rust_euler_suite/p0049/: Cargo.toml
rust_euler_suite/p0049/src/: main.rs
rust_euler_suite/p0050/: Cargo.toml
rust_euler_suite/p0050/src/: main.rs
rust_euler_suite/p0051/: Cargo.toml
rust_euler_suite/p0051/src/: main.rs
rust_euler_suite/p0052/: Cargo.toml
rust_euler_suite/p0052/src/: main.rs
rust_euler_suite/p0053/: Cargo.toml
rust_euler_suite/p0053/src/: main.rs
rust_euler_suite/p0054/: Cargo.toml  build.rs
rust_euler_suite/p0054/src/: main.rs
rust_euler_suite/p0055/: Cargo.toml
rust_euler_suite/p0055/src/: main.rs
rust_euler_suite/p0056/: Cargo.toml
rust_euler_suite/p0056/src/: main.rs
rust_euler_suite/p0057/: Cargo.toml
rust_euler_suite/p0057/src/: main.rs
rust_euler_suite/p0058/: Cargo.toml
rust_euler_suite/p0058/src/: main.rs
rust_euler_suite/p0059/: Cargo.toml  build.rs
rust_euler_suite/p0059/src/: main.rs
rust_euler_suite/p0060/: Cargo.toml
rust_euler_suite/p0060/src/: main.rs
rust_euler_suite/p0061/: Cargo.toml
rust_euler_suite/p0061/src/: main.rs
rust_euler_suite/p0062/: Cargo.toml
rust_euler_suite/p0062/src/: main.rs
rust_euler_suite/p0063/: Cargo.toml
rust_euler_suite/p0063/src/: main.rs
rust_euler_suite/p0064/: Cargo.toml
rust_euler_suite/p0064/src/: main.rs
rust_euler_suite/p0134/: Cargo.toml
rust_euler_suite/p0134/src/: main.rs
rust_euler_suite/p0168/: Cargo.toml
rust_euler_suite/p0168/src/: main.rs
rust_euler_suite/prime_functions/: Cargo.toml
rust_euler_suite/prime_functions/src/: concatenating_primes.rs  lib.rs
