project( ProjectEulerCpp )
cmake_minimum_required(VERSION 3.12)

add_compile_options(-Wall -Wextra -Wpedantic -Ofast)

add_executable( p0001 "P0001/mult35.cpp" )
add_executable( p0002 "P0002/fibeven.cpp" )
add_executable( p0003 "P0003/primefact.cpp" )
add_executable( p0004 "P0004/palindromicnumber.cpp" )
add_executable( p0005 "P0005/smallestdivisible.cpp" )
add_executable( p0006 "P0006/sumsquare.cpp" )
add_executable( p0007 "P0007/prime10001.cpp" )
add_executable( p0008 "P0008/adjacent.cpp" )
add_executable( p0009 "P0009/triplet.cpp" )
add_executable( p0010 "P0010/primesum.cpp" )
add_executable( p0011 "P0011/grid.cpp" )
add_executable( p0012 "P0012/trianglenumbers.cpp" )
add_executable( p0014 "P0014/longestCollatz.cpp" )
add_executable( p0015 "P0015/grid.cpp" )
add_executable( p0016 "P0016/powerdigitsum.cpp" )
add_executable( p0018 "P0018/maximumpath.cpp" )
add_executable( p0020 "P0020/factorialdigitsum.cpp" )
add_executable( p0021 "P0021/amicablenumbers.cpp" )
add_executable( p0022 "P0022/namescores.cpp" )
add_executable( p0023 "P0023/nonabundantsums.cpp" )
add_executable( p0024 "P0024/lexicographicperm.cpp" )
add_executable( p0025 "P0025/fibo1000.cpp" )
add_executable( p0026 "P0026/reciprocalcycles.cpp" )
add_executable( p0027 "P0027/quadraticprimes.cpp" )
add_executable( p0029 "P0029/distinctpowers.cpp" )
add_executable( p0030 "P0030/digitfifthpowers.cpp" )
add_executable( p0031 "P0031/coins.cpp" )
add_executable( p0032 "P0032/pandigital.cpp" )

target_link_libraries(p0016 gmpxx gmp)
target_link_libraries(p0020 gmpxx gmp)
target_link_libraries(p0025 gmpxx gmp)
target_link_libraries(p0029 gmpxx gmp)

configure_file("P0022/p0022_names.txt" "p0022_names.txt" COPYONLY)
