workspace = { members = [ "number_sequences","p0044"] }

[package]
name = "euler_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "lib_number_sequences"
path = "number_sequences/src/lib.rs"

[[bin]]
name = "p0044"
path = "p0044/src/main.rs"