[package]
name = "lib_number_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-modular = "0.6.1"
num-traits = "0.2.19"

[lib]
name = "lib_number_functions"
path = "src/lib.rs"
