[package]
name = "p0134"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
sorted-list = "0.2.0"
lib_prime_functions = { path = "../prime_functions" }
lib_number_functions = { path = "../number_functions" }

[build-dependencies]
